Progress on 1010 objectives, pandoc filter for tags.

--- a/existing/COMP 1010.md
+++ b/existing/COMP 1010.md
@@ -19,7 +19,7 @@ Tasks
 * [X] Extract course objectives from Jim's book.
 * [X] Extract learning objectives from shared course material.
 * [ ] ~~Put learning objectives into a database.~~
-* [ ] Organize objectives into categories.
+* [ ] ~~Organize objectives into categories.~~
 
 Course outcomes
 ---------------
