--- a/reconsidered/COMP1010.md
+++ b/reconsidered/COMP1010.md
@@ -39,8 +39,8 @@ By the end of this course, a student should be able to:
 Learning objectives
 ===================
 
-Unit 1
-------
+Programming Basics
+------------------
 
 By the end of this unit, students should be able to:
 
@@ -64,16 +64,16 @@ language.
 [DrJava]: http://drjava.org/
 [Spyder]: https://www.spyder-ide.org/
 
-### Unit 1, Processing-specific
+### Programming Basics: Processing
 
 By the end of this unit, students should be able to:
 
-1. Draw points, lines, and shapes on the Processing canvas.
+1. Draw points, lines, and shapes on the Processing canvas. :program:
 2. Change properties of shapes and the canvas, like background colour, outline
-   colour, fill colour, size, and position.
+   colour, fill colour, size, and position. :program:
 
-Unit 2
-------
+Variables and Integers
+----------------------
 
 By the end of this unit, students should be able to:
 
@@ -86,7 +86,96 @@ By the end of this unit, students should be able to:
 5. Debug simple errors by inspecting the value of a variable as the program is
    running. :program:
    
-Unit 3
-------
+Coding Style and Standards
+--------------------------
 
+By the end of this unit, students should be able to:
 
+1. Choose meaningful variable names that make code more readable. :program:
+   :communicate:
+2. Declare and use *named constants* in a program. :program:
+3. Identify values that should be represented as a named constant. :program:
+4. Explain how named constants can be used as a safety feature. :communicate:
+
+Active Programs
+---------------
+
+By the end of this unit, students should be able to:
+
+1. Use a "global variable" in a program to maintain state. :program:
+2. Write a program that accepts and reacts to input from a user. :program:
+
+### Active Programs: Processing
+
+By the end of this unit, students should be able to:
+
+1. Use the global variables exposed in the Processing environment as input to a
+   program, like mouse position ([`mouseX`] and [`mouseY`]). :program:
+2. Write a program that changes the canvas as time passes. :program:
+3. List the special function names that are used in Processing. :communicate:
+4. Order the function names by when they are executed when a Processing program
+   is started. :communicate:
+5. Explain the purpose of each of the special function names used in Processing.
+   :communicate:
+   
+[`mouseX`]: https://processing.org/reference/mouseX.html
+[`mouseY`]: https://processing.org/reference/mouseY.html
+
+User-defined Functions, part 1
+------------------------------
+
+By the end of this unit, students should be able to:
+
+1. Create and use user-defined functions in a program. :program:
+    1. Choose a concise and meaningful name for a user-defined function.
+2. Trace the execution of code when user-defined functions are called.
+   :evaluate:
+3. Define the term "local variable". :communicate:
+4. Determine the visibility of a variable declared in a program. :evaluate:
+5. Define the term "scope" in terms of variable visibility when declared within
+   a function. :communicate:
+6. Compare and contrast local and global variables. :communicate:
+
+Real Numbers - `float`s
+-----------------------
+
+By the end of this unit, students should be able to:
+
+1. Declare and use floating-point-type variables in a program. :program:
+2. Evaluate an expression containing floating point numbers. :evaluate:
+3. Determine the type of the result of evaluating an expression. :evaluate:
+4. Use compound assignment/arithmetic operators (e.g., `+=`, `++`). :program:
+5. Explain the difference between integers and real numbers. :communicate:
+6. Explain how and why floating point numbers are limited when being represented
+   in binary by a computer. :communicate:
+7. Use language libraries for evaluating trigonometric functions. :program:
+
+### Real Numbers - `float`s: Processing
+
+By the end of this unit, students should be able to:
+
+1. Use the canvas size to change the behaviour of a program ([`width`],
+   [`height`]). :program:
+   
+[`width`]: https://processing.org/reference/width.html
+[`height`]: https://processing.org/reference/height.html
+
+Text and Strings
+----------------
+
+By the end of this unit, students should be able to:
+
+1. Create and use `String`-type variables in a program. :program:
+    1. Combine multiple `String`s together using the concatenation operator.
+    2. Call an instance method on a `String` to get its length.
+    3. Access individual characters in a `String`, by *index*.
+2. Convert between number types and `String` types. :program:
+3. Explain why number types cannot be assigned to `String` types, and
+   vice-versa. :communicate:
+4. Create and use a `char`-type variable in a program. :program:
+
+### Text and Strings: Processing
+
+By the end of this unit, students should be able to:
+
+1. Draw text on the canvas. :program:
