More progress on objectives.

--- a/reconsidered/COMP1010.md
+++ b/reconsidered/COMP1010.md
@@ -126,7 +126,8 @@ User-defined Functions, part 1
 
 By the end of this unit, students should be able to:
 
-1. Create and use user-defined functions in a program. :program:
+1. Create and use user-defined functions that accept no inputs and do not
+   `return` any data, in a program. :program:
     1. Choose a concise and meaningful name for a user-defined function.
 2. Trace the execution of code when user-defined functions are called.
    :evaluate:
@@ -148,7 +149,8 @@ By the end of this unit, students should be able to:
 5. Explain the difference between integers and real numbers. :communicate:
 6. Explain how and why floating point numbers are limited when being represented
    in binary by a computer. :communicate:
-7. Use language libraries for evaluating trigonometric functions. :program:
+7. Use language libraries for evaluating trigonometric or other math functions.
+   :program:
 
 ### Real Numbers - `float`s: Processing
 
@@ -179,3 +181,176 @@ By the end of this unit, students should be able to:
 By the end of this unit, students should be able to:
 
 1. Draw text on the canvas. :program:
+
+Data Types and Memory
+---------------------
+
+By the end of this unit, students should be able to:
+
+1. Choose a specific number type to represent a value, minimizing required
+   memory (e.g., `double` vs `float` vs `long` vs `int` vs `short`). :program:
+   :evaluate:
+2. Convert between number types using explicit and implicit casts. :program:
+3. Evaluate an expression containing implicit and explicit casts. :evaluate:
+4. Explain what happens to a numeric value when explicit down-casting is
+   applied.  :communicate:
+5. Define the term "Integer overflow". :communicate:
+
+True and False - Booleans
+-------------------------
+
+By the end of this unit, students should be able to:
+
+1. Declare and use `boolean` variables in a program. :program:
+2. Evaluate `boolean` expressions with logical operators (e.g., `and`, `or`,
+   `not`). :evaluate:
+3. Use conditional statements (`if` and `else`) in a program. :program:
+    1. Use *nested* conditional statements in a program.
+4. Decide if a variable is visible (scope) in a nested block. :evaluate:
+
+### True and False - Booleans: Processing
+
+By the end of this unit, students should be able to:
+
+1. Use keyboard and mouse state (keys pressed or not) to affect the behaviour of
+   a program ([`mousePressed`], [`keyPressed`]). :program:
+   
+[`mousePressed`]: https://processing.org/reference/mousePressed.html
+[`keyPressed`]: https://processing.org/reference/keyPressed.html
+
+Advanced Conditionals
+---------------------
+
+By the end of this unit, students should be able to:
+
+1. Use relational operators to compare number types in a program (e.g., `>`,
+   `<`, `>=`, `<=`, `==`, etc). :program:
+2. Evaluate Boolean expressions containing both logical and relational
+   operators. :evaluate: 
+3. Call an instance method on a `String` to *compare* it to another instance of
+   `String`. :program:
+4. Write *concise* logical expressions (i.e., write `if(x)`, **not**
+   `if(x==true)`). :program:
+5. Explain why floating-point numbers cannot be directly compared for equality.
+   :communicate:
+6. Use and evaluate "short-circuit" logical expressions in a program. :program:
+   :evaluate:
+7. Use nested `else if` blocks in a program. :program:
+
+Loops
+-----
+
+By the end of this unit, students should be able to:
+
+1. Write code that repeats execution with loop control structures. :program:
+    1. Use a `for` loop to repeat an operation on a fixed number of items
+       (exactly $n$ times).
+    2. Use a `while` loop to repeat an operation while some condition is `true`
+       (0 or more times).
+    3. Use a `do`/`while` loop to repeat an operation while some condition is
+       `true` (1 or more times).
+    4. Choose the appropriate looping structure for a specific situation.
+2. Evaluate the execution of a loop control structure. :evaluate:
+    1. List the order of operations for both `for` and `while` loop control
+       structures in Java/Processing.
+3. Discover the cause of crashing software by inspecting a stack trace.
+   :program:
+   
+Advanced Loops
+--------------
+
+By the end of this unit, students should be able to:
+
+1. Write code that uses a nested looping structure to solve a problem. :program:
+    1. Identify when a nested loop should be used to solve a problem.
+2. Evaluate the execution of a nested looping structure. :evaluate:
+    1. List the order of operations of a nested looping structure.
+    2. List the state of variables in a nested looping structure.
+3. Write code that uses arbitrarily nested control structures (i.e., conditional
+   statements, loops) to solve a problem. :program:
+4. Manage the state of execution by using using a boolean variable to indicate
+   that an event has happened. :program:
+   
+User Defined Functions Part 2
+-----------------------------
+
+By the end of this unit, students should be able to:
+
+1. Apply top-down programming to simplify and solve complex problems. :abstract:
+    1. Break a problem down into smaller, functional units.
+    2. Decide how much logic belongs in a single function.
+    3. Decide what inputs and outputs a function requires based on what it
+       will do.
+2. Use stub functions to help write code for a previously broken-down problem.
+   :program:
+3. Create and use user-defined functions that accept one or more parameters
+   and/or `return` data to the caller in a program. :program:
+    1. Choose when to use globally-scoped variables and when to use
+       locally-scoped variables/function parameters.
+    2. Pass data to a function by reference, and pass data to a function by
+       value.
+4. Create and use an [accumulator] variable in a program. :program:
+    1. Iteratively build a `String` by appending characters to the empty string.
+    2. Take a running sum of a value by adding numbers to zero.
+    3. Choose an appropriate initial value for an accumulator variable.
+5. List the state and scope of variables by tracing the execution of code when
+   user-defined functions are called. :evaluate:
+    1. Distinguish between multiple variables with the same name in different
+       scopes.
+6. Define the term "side-effects", in relation to calling functions, passing
+   values by reference, and global variables. :communicate:
+
+[accumulator]: https://en.wikipedia.org/wiki/Accumulator_(computing)
+
+Compiling and the Java Virtual Machine
+--------------------------------------
+
+By the end of this unit, students should be able to:
+
+1. Describe the workflow that a computer takes, going from high-level code, to a
+   computer program running on your computer. :communicate:
+    1. Define the terms "compiler", "high-level language", "machine language",
+       "virtual machine", "source code".
+    2. Explain the purpose of a compiler.
+    3. Explain the purpose of a virtual machine.
+
+Array Basics
+------------
+
+By the end of this unit, students should be able to:
+
+1. Create and use arrays in a program. :program:
+    1. Get the length of an array.
+    2. Iterate over an array with a loop.
+    3. Initialize an array with literals.
+2. List the limitations of an array. :communicate:
+3. Compare and contrast `String`s and arrays. :communicate:
+
+Arrays and Memory
+-----------------
+
+By the end of this unit, students should be able to:
+
+1. Name the default value stored in an array, immediately after creation, based
+   on type. :communicate:
+2. Use and compare variables against `null`. :program:
+3. Copy the contents of one array to another. :program:
+4. Compare the contents of two arrays. :program:
+5. Compare and contrast arrays and primitive types. :communicate:
+    1. Explain why the assignment operator does not copy the contents of an
+       array.
+    2. Explain why the equality relational operator does not compare the
+       contents of two arrays.
+
+Arrays and Functions
+--------------------
+
+By the end of this unit, students should be able to:
+
+1. Use arrays as arguments and return values to and from functions. :program:
+    1. Modify data in an array passed as an argument.
+2. Explain why arrays as arguments behave differently from primitive variables.
+   :communicate:
+   
+Working with Arrays: Techniques
+-------------------------------
