--- a/reconsidered/COMP1010.md
+++ b/reconsidered/COMP1010.md
@@ -70,7 +70,7 @@ By the end of this unit, students should be able to:
 
 1. Draw points, lines, and shapes on the Processing canvas. :program:
 2. Change properties of shapes and the canvas, like background colour, outline
-   colour, fill colour, size, and position. :program:
+   colour, fill colour, size, position, and line weight. :program:
 
 Variables and Integers
 ----------------------
@@ -85,6 +85,8 @@ By the end of this unit, students should be able to:
     1. List uses of the modulus operator.
 5. Debug simple errors by inspecting the value of a variable as the program is
    running. :program:
+6. Identify compile-time errors in a fragment of code (e.g., incorrect case on
+   function names, duplicated variable names, non-existent variables). :evaluate:
    
 Coding Style and Standards
 --------------------------
@@ -96,6 +98,7 @@ By the end of this unit, students should be able to:
 2. Declare and use *named constants* in a program. :program:
 3. Identify values that should be represented as a named constant. :program:
 4. Explain how named constants can be used as a safety feature. :communicate:
+5. Compare and contrast named constants and regular variables. :communicate:
 
 Active Programs
 ---------------
@@ -129,13 +132,15 @@ By the end of this unit, students should be able to:
 1. Create and use user-defined functions that accept no inputs and do not
    `return` any data, in a program. :program:
     1. Choose a concise and meaningful name for a user-defined function.
-2. Trace the execution of code when user-defined functions are called.
+2. Identify a syntactically correct function signature from a list of
+   function signatures. :evaluate:
+3. Trace the execution of code when user-defined functions are called.
    :evaluate:
-3. Define the term "local variable". :communicate:
-4. Determine the visibility of a variable declared in a program. :evaluate:
-5. Define the term "scope" in terms of variable visibility when declared within
+4. Define the term "local variable". :communicate:
+5. Determine the visibility of a variable declared in a program. :evaluate:
+6. Define the term "scope" in terms of variable visibility when declared within
    a function. :communicate:
-6. Compare and contrast local and global variables. :communicate:
+7. Compare and contrast local and global variables. :communicate:
 
 Real Numbers - `float`s
 -----------------------
@@ -175,6 +180,10 @@ By the end of this unit, students should be able to:
 3. Explain why number types cannot be assigned to `String` types, and
    vice-versa. :communicate:
 4. Create and use a `char`-type variable in a program. :program:
+5. Evaluate expressions that operate on `String`s. :evaluate:
+    1. Calling instance methods.
+    2. Concatenation operator.
+    3. Order of operations (e.g., `"hello" + (10 + 2)`).
 
 ### Text and Strings: Processing
 
@@ -206,7 +215,7 @@ By the end of this unit, students should be able to:
    `not`). :evaluate:
 3. Use conditional statements (`if` and `else`) in a program. :program:
     1. Use *nested* conditional statements in a program.
-4. Decide if a variable is visible (scope) in a nested block. :evaluate:
+5. Decide if a variable is visible (scope) in a nested block. :evaluate:
 
 ### True and False - Booleans: Processing
 
@@ -236,6 +245,8 @@ By the end of this unit, students should be able to:
 6. Use and evaluate "short-circuit" logical expressions in a program. :program:
    :evaluate:
 7. Use nested `else if` blocks in a program. :program:
+8. Evaluate a code snippet containing complex conditional statements and logical
+   expressions. :evaluate:
 
 Loops
 -----
@@ -250,10 +261,12 @@ By the end of this unit, students should be able to:
     3. Use a `do`/`while` loop to repeat an operation while some condition is
        `true` (1 or more times).
     4. Choose the appropriate looping structure for a specific situation.
-2. Evaluate the execution of a loop control structure. :evaluate:
+2. Convert code that uses a `for` loop to a `while` loop, and vice-versa.
+   :program: :abstract:
+3. Evaluate the execution of a loop control structure. :evaluate:
     1. List the order of operations for both `for` and `while` loop control
        structures in Java/Processing.
-3. Discover the cause of crashing software by inspecting a stack trace.
+4. Discover the cause of crashing software by inspecting a stack trace.
    :program:
    
 Advanced Loops
@@ -289,6 +302,7 @@ By the end of this unit, students should be able to:
        locally-scoped variables/function parameters.
     2. Pass data to a function by reference, and pass data to a function by
        value.
+    3. Use sentinel values to communicate an exceptional situation or error.
 4. Create and use an [accumulator] variable in a program. :program:
     1. Iteratively build a `String` by appending characters to the empty string.
     2. Take a running sum of a value by adding numbers to zero.
@@ -354,3 +368,28 @@ By the end of this unit, students should be able to:
    
 Working with Arrays: Techniques
 -------------------------------
+
+By the end of this unit, students should be able to:
+
+1. Apply strategies for working with partially-filled arrays. :program:
+   :represent: :abstract:
+   1. Use a "pointer" value (an index) to represent the next free location.
+   2. Choose and use an appropriate "sentinel" value to represent unused
+      locations in the array (e.g., `null`, negative numbers, numbers outside
+      the range of values being represented).
+2. Explain the limitations of partially-filled arrays. :communicate:
+    1. List strategies for overcoming the limitations of partially filled
+       arrays.
+3. Describe the linear search algorithm in plain English. :communicate:
+    1. Give an example of data where linear search might be used.
+    2. Explain the limitations of linear search.
+4. Implement the linear search algorithm on an array. :program:
+5. Describe the binary search algorithm in plain English. :communicate:
+    1. Give an example of data where binary search might be used.
+    2. Explain the limitations of binary search.
+6. Implement the binary search algorithm on an array. :program:
+7. Measure the complexity of linear search and binary search. :abstract:
+8. Compare and contrast linear search and binary search. :communicate:
+9. Use "parallel" arrays to represent compound information for a single entity
+   (i.e., `name[0]` and `age[0]` represent the same person). :abstract:
+   :program:
