Finished reviewing outcomes for COMP 1020 from slides.

--- a/existing/COMP 1020.md
+++ b/existing/COMP 1020.md
@@ -17,7 +17,7 @@ Tasks
 
 * [X] Contact Olivier
 * [X] Extract outcomes from Olivier's Fall 2019 offering.
-* [ ] Check that outcomes align with assessment material.
+* [ ] ~~Check that outcomes align with assessment material.~~
 
 Course objectives
 -----------------
