Adding tags to both 1010 and 1020.

--- a/reconsidered/COMP1010.md
+++ b/reconsidered/COMP1010.md
@@ -32,7 +32,7 @@ By the end of this course, a student should be able to:
    :communicate:
 4. Represent ideas and information in a way that computers can understand and
    act on. :represent:
-5. Analyze and implement basic searching algorithms. :abstract:
+5. Analyze and implement basic searching algorithms. :algorithms:
 
 \setcounter{section}{1009}
 
@@ -77,7 +77,7 @@ Variables and Integers
 
 By the end of this unit, students should be able to:
 
-1. Declare and use a variable in a program to represent information.  :program:
+1. Declare and use a variable in a program to represent information. :represent: :program:
 2. Initialize a variable using a literal value. :program:
 3. Evaluate arithmetic expressions (&plus;, &minus;, &times;, &divide;, mod)
    that include both literal values and variables. :program: :evaluate:
@@ -96,7 +96,7 @@ By the end of this unit, students should be able to:
 1. Choose meaningful variable names that make code more readable. :program:
    :communicate:
 2. Declare and use *named constants* in a program. :program:
-3. Identify values that should be represented as a named constant. :program:
+3. Identify values that should be represented as a named constant. :represent: :program:
 4. Explain how named constants can be used as a safety feature. :communicate:
 5. Compare and contrast named constants and regular variables. :communicate:
 
@@ -105,7 +105,7 @@ Active Programs
 
 By the end of this unit, students should be able to:
 
-1. Use a "global variable" in a program to maintain state. :program:
+1. Use a "global variable" in a program to maintain state. :represent: :program:
 2. Write a program that accepts and reacts to input from a user. :program:
 
 ### Active Programs: Processing
@@ -147,13 +147,13 @@ Real Numbers - `float`s
 
 By the end of this unit, students should be able to:
 
-1. Declare and use floating-point-type variables in a program. :program:
+1. Declare and use floating-point-type variables in a program. :represent: :program:
 2. Evaluate an expression containing floating point numbers. :evaluate:
 3. Determine the type of the result of evaluating an expression. :evaluate:
 4. Use compound assignment/arithmetic operators (e.g., `+=`, `++`). :program:
 5. Explain the difference between integers and real numbers. :communicate:
 6. Explain how and why floating point numbers are limited when being represented
-   in binary by a computer. :communicate:
+   in binary by a computer. :represent: :communicate:
 7. Use language libraries for evaluating trigonometric or other math functions.
    :program:
 
@@ -172,14 +172,14 @@ Text and Strings
 
 By the end of this unit, students should be able to:
 
-1. Create and use `String`-type variables in a program. :program:
+1. Create and use `String`-type variables in a program. :represent: :program:
     1. Combine multiple `String`s together using the concatenation operator.
     2. Call an instance method on a `String` to get its length.
     3. Access individual characters in a `String`, by *index*.
 2. Convert between number types and `String` types. :program:
 3. Explain why number types cannot be assigned to `String` types, and
    vice-versa. :communicate:
-4. Create and use a `char`-type variable in a program. :program:
+4. Create and use a `char`-type variable in a program. :represent: :program:
 5. Evaluate expressions that operate on `String`s. :evaluate:
     1. Calling instance methods.
     2. Concatenation operator.
@@ -198,11 +198,11 @@ By the end of this unit, students should be able to:
 
 1. Choose a specific number type to represent a value, minimizing required
    memory (e.g., `double` vs `float` vs `long` vs `int` vs `short`). :program:
-   :evaluate:
+   :evaluate: :represent:
 2. Convert between number types using explicit and implicit casts. :program:
 3. Evaluate an expression containing implicit and explicit casts. :evaluate:
 4. Explain what happens to a numeric value when explicit down-casting is
-   applied.  :communicate:
+   applied. :communicate:
 5. Define the term "Integer overflow". :communicate:
 
 True and False - Booleans
@@ -210,7 +210,7 @@ True and False - Booleans
 
 By the end of this unit, students should be able to:
 
-1. Declare and use `boolean` variables in a program. :program:
+1. Declare and use `boolean` variables in a program. :program: :represent:
 2. Evaluate `boolean` expressions with logical operators (e.g., `and`, `or`,
    `not`). :evaluate:
 3. Use conditional statements (`if` and `else`) in a program. :program:
@@ -262,7 +262,7 @@ By the end of this unit, students should be able to:
        `true` (1 or more times).
     4. Choose the appropriate looping structure for a specific situation.
 2. Convert code that uses a `for` loop to a `while` loop, and vice-versa.
-   :program: :abstract:
+   :program: :algorithms:
 3. Evaluate the execution of a loop control structure. :evaluate:
     1. List the order of operations for both `for` and `while` loop control
        structures in Java/Processing.
@@ -289,7 +289,7 @@ User Defined Functions Part 2
 
 By the end of this unit, students should be able to:
 
-1. Apply top-down programming to simplify and solve complex problems. :abstract:
+1. Apply top-down programming to simplify and solve complex problems. :algorithms:
     1. Break a problem down into smaller, functional units.
     2. Decide how much logic belongs in a single function.
     3. Decide what inputs and outputs a function requires based on what it
@@ -333,7 +333,7 @@ Array Basics
 
 By the end of this unit, students should be able to:
 
-1. Create and use arrays in a program. :program:
+1. Create and use arrays in a program. :program: :represent:
     1. Get the length of an array.
     2. Iterate over an array with a loop.
     3. Initialize an array with literals.
@@ -372,7 +372,7 @@ Working with Arrays: Techniques
 By the end of this unit, students should be able to:
 
 1. Apply strategies for working with partially-filled arrays. :program:
-   :represent: :abstract:
+   :represent: :algorithms:
    1. Use a "pointer" value (an index) to represent the next free location.
    2. Choose and use an appropriate "sentinel" value to represent unused
       locations in the array (e.g., `null`, negative numbers, numbers outside
@@ -380,16 +380,16 @@ By the end of this unit, students should be able to:
 2. Explain the limitations of partially-filled arrays. :communicate:
     1. List strategies for overcoming the limitations of partially filled
        arrays.
-3. Describe the linear search algorithm in plain English. :communicate:
+3. Describe the linear search algorithm in plain English. :algorithms: :communicate:
     1. Give an example of data where linear search might be used.
     2. Explain the limitations of linear search.
-4. Implement the linear search algorithm on an array. :program:
-5. Describe the binary search algorithm in plain English. :communicate:
+4. Implement the linear search algorithm on an array. :algorithms: :program:
+5. Describe the binary search algorithm in plain English. :algorithms: :communicate:
     1. Give an example of data where binary search might be used.
     2. Explain the limitations of binary search.
-6. Implement the binary search algorithm on an array. :program:
-7. Measure the complexity of linear search and binary search. :abstract:
-8. Compare and contrast linear search and binary search. :communicate:
+6. Implement the binary search algorithm on an array. :algorithms: :program:
+7. Measure the complexity of linear search and binary search. :algorithms:
+8. Compare and contrast linear search and binary search. :algorithms: :communicate:
 9. Use "parallel" arrays to represent compound information for a single entity
-   (i.e., `name[0]` and `age[0]` represent the same person). :abstract:
+   (i.e., `name[0]` and `age[0]` represent the same person). :represent:
    :program:
