--- a/reconsidered/COMP1020.md
+++ b/reconsidered/COMP1020.md
@@ -112,7 +112,8 @@ By the end of this unit, students should be able to:
 1. Declare, initialize, and use multi-dimensional arrays in a Java program.
    :data-structures: :program:
     1. Declare, initialize, and use "ragged" arrays in a Java program (i.e.,
-       multi-dimensional arrays with non-uniform length in the 2nd+ dimension).
+       multi-dimensional arrays with non-uniform length in the 2^nd^+
+       dimension).
     2. Write a class that has a multi-dimensional array as an instance variable.
 2. Given a piece of code, draw a diagram representing the state of references in
    a multi-dimensional array. :data-structures: :communicate:
