Add learning objectives from assignments.

--- a/reconsidered/COMP1020.md
+++ b/reconsidered/COMP1020.md
@@ -146,6 +146,8 @@ By the end of this unit, students should be able to:
 4. Read and write text files in a program. :files: :program:
 5. Parse the contents of a file by tokenizing strings in a program (e.g.,
    `String#split` or `Scanner`). :files: :program:
+    1. Create an instance of a class based on the data that's contained within a
+       file.
    
    
 OOP Polymorphism 1
