Reword some course outcomes.

--- a/reconsidered/COMP1020.md
+++ b/reconsidered/COMP1020.md
@@ -28,9 +28,9 @@ By the end of this course, a student should be able to:
 
 1. Use classes, objects, and inheritance effectively to design and implement
    structured representation of information. :oo:
-2. Software design. :design:
-3. Testing. :testing:
-4. Exceptions. :exceptions:
+2. Begin to design software using non-OO principles. :design:
+3. Begin to evaluate software behaviour. :testing:
+4. Write code that can handle failures gracefully. :exceptions:
 5. Write software that deals with large sets of data using files stored on disk.
    :files:
 6. Apply searching and sorting algorithms to collections, compare efficiency. :algorithms:
