Trying to figure out how to organize things in a structured way.

--- a/reconsidered/COMP1010.md
+++ b/reconsidered/COMP1010.md
@@ -4,7 +4,10 @@ author: Franklin Bristow
 date: 2020
 header-includes:
     \usepackage{fullpage}
+toc: yes
 toccolor: blue
+toc-depth: 1
+number-offset: 1010
 ---
 
 Course prerequisites {-}
@@ -34,10 +37,11 @@ By the end of this course, a student should be able to:
    act on. :represent:
 5. Analyze and implement basic searching algorithms. :algorithms:
 
-\setcounter{section}{1009}
 
-Learning objectives
+Learning objectives {-}
 ===================
+
+\setcounter{section}{1010}
 
 Programming Basics
 ------------------
