Learning outcomes are colour coded.

--- a/blog/March 25, 2020.md
+++ b/blog/March 25, 2020.md
@@ -3,7 +3,7 @@ Today's goals:
 * [X] Update the `pandoc` filter to collect all the learning objectives in a
       course, then dump them all out at the end under headings for each
       course-level learning outcome.
-* [ ] Update the `pandoc` filter to add a *colour* to each course-level learning
+* [X] Update the `pandoc` filter to add a *colour* to each course-level learning
       outcome, then highlight them in the document wherever they appear. Use
       something like the HTML colour palette for high contrast.
 
