--- a/blog/March 25, 2020.md
+++ b/blog/March 25, 2020.md
@@ -12,3 +12,5 @@ thing on the right side of the screen that shows (using the aforementioned
 colours) how the course focus flows through the chapters. Of course, that might
 be a harder pull to figure out how to do. Maybe a fun diversion into d3 or
 something?
+
+Check this out: https://github.com/d3/d3-scale-chromatic
