Nice colour line for courses.

--- a/reconsidered/COMP1020.md
+++ b/reconsidered/COMP1020.md
@@ -14,12 +14,13 @@ Before entering this course, a student should have completed COMP 101{0,1,2,3}
 and should be able to:
 
 * Write and run moderately complex programs using a procedural programming
-  language.
-* Read and evaluate written programs.
+  language. :program:
+* Read and evaluate written programs. :evaluate:
 * Describe basic programming concepts and structures in plain English.
+  :communicate:
 * Represent ideas and information in a way that computers can understand and act
-  on.
-* Analyze and implement basic searching algorithms.
+  on. :represent:
+* Analyze and implement basic searching algorithms. :algorithms:
 
 Course outcomes {-}
 ===============
@@ -38,9 +39,7 @@ By the end of this course, a student should be able to:
 8. Formulate recursive solutions to problems, and write recursive methods.
    :recursion:
 
-\setcounter{section}{1019}
-
-Learning objectives
+Learning objectives {-}
 ===================
 
 Course introduction, real Java
