--- a/blog/March 26, 2020.md
+++ b/blog/March 26, 2020.md
@@ -1,9 +1,9 @@
 Goals for today:
 
 * [X] Use colours in the LaTeX output, too.
-* [ ] Look into the showerthought idea of putting a colour line in the
+* [X] Look into the showerthought idea of putting a colour line in the
       curriculum document to visualize how the course units flow through course
-      outcomes.
+      outcomes. I don't think this is realistically doable with 
 * [ ] Manually tag all course objectives so that you can make references across
       documents.
     * [ ] Figure out what the best tagging approach is (pure LaTeX?)
